# hathor-ct-crypto

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  UPSTREAM.md  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build-mobile.yml  build-node.yml  build-wasm.yml  ci.yml
crypto-core/: Cargo.toml
crypto-core/src/: balance.rs  ecdh.rs  lib.rs  pedersen.rs  rangeproof.rs  surjection.rs
scripts/: check-drift.sh
test-vectors/: README.md  generate-vectors.mjs  parity.test.mjs  shielded-parity-vectors.json
