[workspace]
resolver = "2"
members = [
    "crypto-core",
    "packages/ct-crypto-mobile",
    "packages/ct-crypto-node",
    "packages/ct-crypto-wasm",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/HathorNetwork/hathor-ct-crypto"

[workspace.dependencies]
secp256k1-zkp = { version = "0.11", features = ["global-context", "rand-std", "std"] }
rand = "0.8"
sha2 = "0.11"
hex = "0.4"
thiserror = "1"
zeroize = "1"
